<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:id="@+id/leaderboardsDivider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/positionTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/leaderboardsDivider"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/position"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameTextView"
        app:layout_constraintStart_toEndOf="@id/positionTextView"
        app:layout_constraintTop_toTopOf="@id/positionTextView"
        android:text="@string/name"
        android:textSize="16sp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoreLeaderboardsTextView"
        android:text="@string/score"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/positionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>