<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?colorPrimaryVariant"
    android:orientation="vertical"
    >

    <include layout="@layout/topbar_layout" />
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="?colorPrimaryVariant">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/usernameLoginTextView"
            android:text="@string/username"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/usernameLoginEditText"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/usernameLoginEditText"
            android:hint="@string/username"
            android:text=""
            app:layout_constraintTop_toTopOf="@id/usernameLoginTextView"
            app:layout_constraintStart_toEndOf="@id/usernameLoginTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:ems="10"
            android:inputType="text"
            android:imeOptions="flagNoExtractUi"
            android:layout_marginStart="5dp"/>

        <!-- password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/passwordLoginTextView"
            android:textStyle="bold"
            android:text="@string/passwordTV"
            app:layout_constraintTop_toBottomOf="@id/usernameLoginTextView"
            app:layout_constraintBottom_toBottomOf="@id/passwordLoginEditText"
            app:layout_constraintStart_toStartOf="@id/usernameLoginTextView"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/passwordLoginEditText"
            android:hint="@string/passwordTV"
            android:text=""
            app:layout_constraintTop_toTopOf="@id/passwordLoginTextView"
            app:layout_constraintStart_toEndOf="@id/usernameLoginTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:ems="10"
            android:inputType="textVisiblePassword"
            android:imeOptions="flagNoExtractUi"
            android:layout_marginStart="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginActivityButton"
            android:text="@string/login"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="@id/passwordLoginTextView"
            app:layout_constraintTop_toBottomOf="@id/passwordLoginTextView"
            android:layout_marginTop="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
